postprocess.cc
#line 1 "postprocess.rl"

#include <string>
#include <fstream>
#include <iostream>
#include <cstdlib>

using std::cin;
using std::cout;
using std::cerr;
using std::ifstream;
using std::ofstream;
using std::string;
using std::ios_base;
using std::endl;


#line 19 "postprocess.cc"
static const int PostProcess_start = 91;
static const int PostProcess_first_final = 91;
static const int PostProcess_error = 0;

static const int PostProcess_en_retvals = 124;
static const int PostProcess_en_mtocsubst = 127;
static const int PostProcess_en_main = 91;

#line 72 "postprocess.rl"


class PostProcess
{

public:
  PostProcess(const string & filename) :
    filename_(filename),
    line(1),
    ts(0), te(0), have(0)
  { }

  int execute()
  {
    std::ios::sync_with_stdio(false);

    
#line 46 "postprocess.cc"
	{
	cs = PostProcess_start;
	ts = 0;
	te = 0;
	act = 0;
	}
#line 89 "postprocess.rl"

    ifstream is;
    try
    {
      is.open(filename_.c_str());
    }
    catch (std::ifstream::failure e)
    {
      cerr << "Exception opening/reading file";
      exit(-1);
    }

    is.seekg(0, ios_base::end);
    int length = is.tellg();
    is.seekg(0, ios_base::beg);

    char * buf = new char[(int)(1.1*length)];
    char * p = buf;
//    char * tmp_p = p;

    is.read(buf, length);
    is.close();

    ofstream fout;
    try
    {
      fout.open(filename_.c_str(), ios_base::trunc);
    }
    catch (std::ofstream::failure e)
    {
      cerr << "Exception opening/writing file";
      exit(-1);
    }

    int len = is.gcount();
    char *pe = p + len;
    char *eof = pe;

    
#line 93 "postprocess.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr0:
#line 68 "postprocess.rl"
	{{p = ((te))-1;}{ fout.write(ts, te-ts); }}
	goto st91;
tr6:
#line 64 "postprocess.rl"
	{te = p+1;{ {goto st127;} }}
	goto st91;
tr17:
#line 62 "postprocess.rl"
	{te = p+1;{fout << "function ";}}
	goto st91;
tr35:
#line 60 "postprocess.rl"
	{te = p+1;{ fout << "function "; {goto st124;} }}
	goto st91;
tr53:
#line 58 "postprocess.rl"
	{te = p+1;{ fout << "function ["; {goto st124;} }}
	goto st91;
tr96:
#line 70 "postprocess.rl"
	{te = p+1;{fout << *ts;}}
	goto st91;
tr100:
#line 1 "postprocess.rl"
	{	switch( act ) {
	case 12:
	{{p = ((te))-1;}fout << " ";}
	break;
	case 13:
	{{p = ((te))-1;} fout.write(ts, te-ts); }
	break;
	}
	}
	goto st91;
tr101:
#line 68 "postprocess.rl"
	{te = p;p--;{ fout.write(ts, te-ts); }}
	goto st91;
st91:
#line 1 "postprocess.rl"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof91;
case 91:
#line 1 "postprocess.rl"
	{ts = p;}
#line 147 "postprocess.cc"
	switch( (*p) ) {
		case 32: goto tr96;
		case 38: goto tr96;
		case 62: goto tr96;
		case 91: goto tr96;
		case 93: goto tr96;
		case 95: goto tr96;
		case 109: goto st93;
		case 110: goto st115;
		case 114: goto st120;
		case 123: goto tr96;
		case 125: goto tr96;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr96;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr96;
	} else
		goto tr96;
	goto tr95;
tr95:
#line 1 "postprocess.rl"
	{te = p+1;}
#line 68 "postprocess.rl"
	{act = 13;}
	goto st92;
tr121:
#line 1 "postprocess.rl"
	{te = p+1;}
#line 66 "postprocess.rl"
	{act = 12;}
	goto st92;
st92:
	if ( ++p == pe )
		goto _test_eof92;
case 92:
#line 186 "postprocess.cc"
	switch( (*p) ) {
		case 32: goto tr100;
		case 38: goto tr100;
		case 62: goto tr100;
		case 91: goto tr100;
		case 93: goto tr100;
		case 95: goto tr100;
		case 123: goto tr100;
		case 125: goto tr100;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr100;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr100;
	} else
		goto tr100;
	goto tr95;
st93:
	if ( ++p == pe )
		goto _test_eof93;
case 93:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 97: goto st94;
		case 116: goto st112;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st94:
	if ( ++p == pe )
		goto _test_eof94;
case 94:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 116: goto st95;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st95:
	if ( ++p == pe )
		goto _test_eof95;
case 95:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 108: goto st96;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st96:
	if ( ++p == pe )
		goto _test_eof96;
case 96:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 97: goto st97;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st97:
	if ( ++p == pe )
		goto _test_eof97;
case 97:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 98: goto st98;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st98:
	if ( ++p == pe )
		goto _test_eof98;
case 98:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 116: goto st99;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st99:
	if ( ++p == pe )
		goto _test_eof99;
case 99:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 121: goto st100;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st100:
	if ( ++p == pe )
		goto _test_eof100;
case 100:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 112: goto st101;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st101:
	if ( ++p == pe )
		goto _test_eof101;
case 101:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 101: goto st102;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st102:
	if ( ++p == pe )
		goto _test_eof102;
case 102:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 115: goto st103;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st103:
	if ( ++p == pe )
		goto _test_eof103;
case 103:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 117: goto st104;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st104:
	if ( ++p == pe )
		goto _test_eof104;
case 104:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 98: goto st105;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st105:
	if ( ++p == pe )
		goto _test_eof105;
case 105:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 115: goto st106;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st106:
	if ( ++p == pe )
		goto _test_eof106;
case 106:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 116: goto st107;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st107:
	if ( ++p == pe )
		goto _test_eof107;
case 107:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 105: goto st108;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st108:
	if ( ++p == pe )
		goto _test_eof108;
case 108:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 116: goto st109;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st109:
	if ( ++p == pe )
		goto _test_eof109;
case 109:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 117: goto st110;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st110:
	if ( ++p == pe )
		goto _test_eof110;
case 110:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 116: goto st111;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st111:
	if ( ++p == pe )
		goto _test_eof111;
case 111:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 101: goto tr121;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st112:
	if ( ++p == pe )
		goto _test_eof112;
case 112:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 111: goto st113;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st113:
	if ( ++p == pe )
		goto _test_eof113;
case 113:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 99: goto tr123;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
tr123:
#line 1 "postprocess.rl"
	{te = p+1;}
	goto st114;
st114:
	if ( ++p == pe )
		goto _test_eof114;
case 114:
#line 719 "postprocess.cc"
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto st1;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	if ( (*p) == 115 )
		goto st2;
	goto tr0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 117 )
		goto st3;
	goto tr0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 98 )
		goto st4;
	goto tr0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 115 )
		goto st5;
	goto tr0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 116 )
		goto st6;
	goto tr0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 95 )
		goto tr6;
	goto tr0;
st115:
	if ( ++p == pe )
		goto _test_eof115;
case 115:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 111: goto st116;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st116:
	if ( ++p == pe )
		goto _test_eof116;
case 116:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 114: goto st117;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st117:
	if ( ++p == pe )
		goto _test_eof117;
case 117:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 101: goto st118;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st118:
	if ( ++p == pe )
		goto _test_eof118;
case 118:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 116: goto tr128;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
tr128:
#line 1 "postprocess.rl"
	{te = p+1;}
	goto st119;
st119:
	if ( ++p == pe )
		goto _test_eof119;
case 119:
#line 885 "postprocess.cc"
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 58: goto st7;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 59 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 58 )
		goto st8;
	goto tr0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 115 )
		goto st9;
	goto tr0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 117 )
		goto st10;
	goto tr0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 98 )
		goto st11;
	goto tr0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 115 )
		goto st12;
	goto tr0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 116 )
		goto st13;
	goto tr0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 105 )
		goto st14;
	goto tr0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 116 )
		goto st15;
	goto tr0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 117 )
		goto st16;
	goto tr0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 116 )
		goto st17;
	goto tr0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) == 101 )
		goto tr17;
	goto tr0;
st120:
	if ( ++p == pe )
		goto _test_eof120;
case 120:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 101: goto st121;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st121:
	if ( ++p == pe )
		goto _test_eof121;
case 121:
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 116: goto tr131;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 58 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
tr131:
#line 1 "postprocess.rl"
	{te = p+1;}
	goto st122;
st122:
	if ( ++p == pe )
		goto _test_eof122;
case 122:
#line 1039 "postprocess.cc"
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 58: goto st18;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 115: goto tr133;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 59 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) == 58 )
		goto st19;
	goto tr0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 115 )
		goto st20;
	goto tr0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) == 117 )
		goto st21;
	goto tr0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 98 )
		goto st22;
	goto tr0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( (*p) == 115 )
		goto st23;
	goto tr0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 116 )
		goto st24;
	goto tr0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 105 )
		goto st25;
	goto tr0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 116 )
		goto st26;
	goto tr0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 117 )
		goto st27;
	goto tr0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 116 )
		goto st28;
	goto tr0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 101 )
		goto st29;
	goto tr0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 115 )
		goto st30;
	goto tr0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 116 )
		goto st31;
	goto tr0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) == 97 )
		goto st32;
	goto tr0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) == 114 )
		goto st33;
	goto tr0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 116 )
		goto st34;
	goto tr0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( (*p) == 58 )
		goto st35;
	goto tr0;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	if ( (*p) == 58 )
		goto tr35;
	goto tr0;
tr133:
#line 1 "postprocess.rl"
	{te = p+1;}
	goto st123;
st123:
	if ( ++p == pe )
		goto _test_eof123;
case 123:
#line 1195 "postprocess.cc"
	switch( (*p) ) {
		case 32: goto tr101;
		case 38: goto tr101;
		case 58: goto st36;
		case 62: goto tr101;
		case 91: goto tr101;
		case 93: goto tr101;
		case 95: goto tr101;
		case 123: goto tr101;
		case 125: goto tr101;
	}
	if ( (*p) < 40 ) {
		if ( 9 <= (*p) && (*p) <= 10 )
			goto tr101;
	} else if ( (*p) > 41 ) {
		if ( 59 <= (*p) && (*p) <= 60 )
			goto tr101;
	} else
		goto tr101;
	goto tr95;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	if ( (*p) == 58 )
		goto st37;
	goto tr0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	if ( (*p) == 115 )
		goto st38;
	goto tr0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	if ( (*p) == 117 )
		goto st39;
	goto tr0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	if ( (*p) == 98 )
		goto st40;
	goto tr0;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	if ( (*p) == 115 )
		goto st41;
	goto tr0;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	if ( (*p) == 116 )
		goto st42;
	goto tr0;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	if ( (*p) == 105 )
		goto st43;
	goto tr0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	if ( (*p) == 116 )
		goto st44;
	goto tr0;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	if ( (*p) == 117 )
		goto st45;
	goto tr0;
st45:
